Add `StakingRewards` singleton state (#7549)
Signed-off-by: Matt Hess <matt.hess@swirldslabs.com>
Signed-off-by: Neeharika-Sompalli <neeharika.sompalli@swirldslabs.com>
Co-authored-by: Matt Hess <matt.hess@swirldslabs.com>
Signed-off-by: Valentin Tronkov <99957253+vtronkov@users.noreply.github.com>